<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sunny_background"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:fontFamily="@font/nanumsquare_ac_bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/reset_name"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:fontFamily="@font/nanumsquare_ac_bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/days_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_date"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/nanumsquare_ac_regular"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/weather_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:scaleType="fitXY"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/sunny_icon"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reset_temp"
                android:textSize="75sp"
                android:textColor="@color/black"
                android:fontFamily="@font/nanumsquare_ac_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/celsius"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:fontFamily="@font/nanumsquare_ac_regular"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/sunrise"
                    android:contentDescription="@string/sunrise" />

                <TextView
                    android:id="@+id/sun_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/nanumsquare_ac_regular"
                    android:text="@string/sunset"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/sun_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/reset_time"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nanumsquare_ac_bold"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="30dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/rainPercent"
                    android:src="@drawable/umbrella" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/rainPercent"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nanumsquare_ac_regular"/>

                <TextView
                    android:id="@+id/rain_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/nanumsquare_ac_bold"
                    android:text="@string/reset_humid"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:layout_gravity="center_vertical"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/blowing"
                    android:contentDescription="@string/sunrise" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/wind"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nanumsquare_ac_regular"/>
                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/reset_blowing"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nanumsquare_ac_bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>